# MeloTTS.cpp

./: .gitattributes  CMakeLists.txt  README.md  inputs.txt  melo.cpp  melo_old.cpp  run_tts.bat  run_tts.sh
benchmark/: benchmark_py.bat  ja_bert.npy
ov_models/: bert_ZH.xml  bert_zn_mix_en.xml  bert_zn_mix_en_int8.xml  cmudict_cache.txt  punc.dic  tts_zn_mix_en.xml  tts_zn_mix_en_int8.xml
scripts/: vocab_deal.py  zh_mix_en_egs_text.txt
src/: bert.cpp  bert.h  chinese_mix.cpp  chinese_mix.h  cmudict.cpp  cmudict.h  info_data.h  librosa.h  logging.cpp  logging.h  openvino_model.cpp  openvino_model.h  openvino_model_base.cpp  openvino_model_base.h  openvoice2_processor.cpp  openvoice2_processor.h  openvoice_tts.cpp  openvoice_tts.h  parse_args.h  status.h  tokenizer.cpp  tokenizer.h  tone_sandhi.cpp  tone_sandhi.h  tts.cpp  tts.h  utils.cpp  utils.h
tests/: bert_tokenizer.cpp  cmudict_test.cpp  test_bert.cpp  test_chinese_mix.cpp  test_cmudict.cpp  test_cppinyin.cpp  test_cppjieba.cpp  test_dart.cpp  test_darts.cpp  test_hanz2piny.cpp  test_openvoice_tts.cpp  test_split_sentence.cpp  test_tokenizer.cpp
